[tool.poetry]
name = "tale"
version = "0.1.0"
description = "'A fun weekend'"
authors = ["Levin Kobelke <levinkobelke1@gmail.com>"]
readme = "README.md"
packages = [{include = "tale"}]

[tool.poetry.dependencies]
python = "^3.11"
annotated-types = "0.5.0"
anyio = "3.7.1"
click = "8.1.6"
fastapi = "0.100.1"
h11 = "0.14.0"
idna = "3.4"
iniconfig = "2.0.0"
mypy = "1.4.1"
mypy-extensions = "1.0.0"
numpy = "^1.0.0"
packaging = "23.1"
pluggy = "1.2.0"
pydantic = "2.1.1"
pydantic-core = "2.4.0"
pytest = "7.4.0"
sniffio = "1.3.0"
starlette = "0.27.0"
typing-extensions = "4.7.1"
uvicorn = "0.23.1"
huggingface = "^0.0.1"
diffusers = "^0.19.2"
transformers = "^4.31.0"
torch = "^2.0.1"
accelerate = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
